--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,35 @@
+/* This is a comment */
+
 body {
     font-family: Arial, Helvetica, sans-serif;
 }
 
+body,
+h1,
+header {
+    margin: 0 auto;
+}
+
+header {
+    background-color: black;
+    height: 300px;
+    padding: 0 auto;
+}
+
+
 h1 {
+    color: white;
     font-size: 48px;
     text-align: center;
+    padding: 110px;
+    }
+
+
+.recipe-list {
+    line-height: 200%;
+    list-style-type: square;
+}
+
+.menu {
+    padding: 20px 250px;
 }
